correct casing of file names. Add components

--- a/src/views/Search.ejs
+++ b/src/views/Search.ejs
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="css/recipe.css" />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Recipe By Design</title>
+    <title>Search Recipes</title>
   </head>
 
   <body>
