--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/splash.css">
-    <title>Document</title>
+    <title>RECIPE BY DESIGN: HOME</title>
 </head>
 <body>
     <div class="container">
         <div class= "split left">
             <h1>Pick & Choose</h1>
-            <span class="spanLeft"><a href="recipe.html" class="btn">Search</a></span>
+            <span class="spanLeft"><a href="/search" class="btn">Search</a></span>
         </div>
         <div class= "split right">
             <h1>Recipe Roulette</h1>
-            <span class="spanRight"><a href="roulette.html" class="btn">Search</a></span>
+            <span class="spanRight"><a href="/roulette" class="btn">Search</a></span>
         </div>
 
     </div>
