add Head and Navigation components

--- a/src/views/cocktails.ejs
+++ b/src/views/cocktails.ejs
@@ -18,17 +18,7 @@
 
 <body class="cocktails">
   <nav>
-    <input type="checkbox" id="check" />
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
-    </label>
-
-    <ul>
-      <li><a href="/recipe.html">Home</a></li>
-      <li><a href="/roulette.html">Recipe Roulette</a></li>
-      <li><a class="activeCocktail" href="/cocktails.html">Cocktails</a></li>
-      <li><a href="/contact.html">Contact Us</a></li>
-    </ul>
+    <%- include('../components/Navigation'); %>
   </nav>
 
   <!-- seach area  -->
