--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -17,17 +17,7 @@
 
 <body class="contactUs">
   <nav>
-    <input type="checkbox" id="check">
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
-    </label>
-    <!-- <label class="logo"><img src="/images/logo2.png" width="39%"></label> -->
-    <ul>
-      <li><a href="/recipe.html">Home</a></li>
-      <li><a href="/roulette.html">Recipe Roulette</a></li>
-      <li><a href="/cocktails.html">Cocktails</a></li>
-      <li><a class="activeContact" href="/contact.html">Contact Us</a></li>
-    </ul>
+    <%- include('../components/Navigation'); %>
   </nav>
 
   <section class="contact-area">
