--- a/src/views/roulette.ejs
+++ b/src/views/roulette.ejs
@@ -17,17 +17,7 @@
 </head>
 <header>
   <nav>
-    <input type="checkbox" id="check">
-    <label for="check" class="checkbtn">
-      <i class="fas fa-bars"></i>
-    </label>
-
-    <ul>
-      <li><a href="/recipe.html">Home</a></li>
-      <li><a class="active" href="/roulette.html">Recipe Roulette</a></li>
-      <li><a href="/cocktails.html">Cocktails</a></li>
-      <li><a href="/contact.html">Contact Us</a></li>
-    </ul>
+    <%- include('../components/Navigation'); %>
   </nav>
 </header>
 
