--- a/src/views/Search.ejs
+++ b/src/views/Search.ejs
@@ -1,33 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-      integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-
-    <link rel="stylesheet" href="css/recipe.css" />
-    <link rel="stylesheet" href="css/style.css" />
+    <%- include('../components/Head'); %>
     <title>Search Recipes</title>
   </head>
 
   <body>
     <nav>
-      <input type="checkbox" id="check" />
-      <label for="check" class="checkbtn">
-        <i class="fas fa-bars"></i>
-      </label>
-
-      <ul>
-        <li><a class="active" href="recipe.html">Home</a></li>
-        <li><a href="roulette.html">Recipe Roulette</a></li>
-        <li><a href="cocktails.html">Cocktails</a></li>
-        <li><a href="contact.html">Contact Us</a></li>
-      </ul>
+      <%- include('../components/Navigation'); %>
     </nav>
 
     <!-- seach area  -->
@@ -69,6 +50,6 @@
       integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ" crossorigin="anonymous"></script>
-    <script src="js/main.js"></script>
+    <script src="js/search.js"></script>
   </body>
 </html>
