--- a/src/views/Search.ejs
+++ b/src/views/Search.ejs
@@ -4,6 +4,8 @@
 <head>
     <%- include('../components/Head'); %>
     <title>Search Recipes</title>
+    <link rel="stylesheet" href="../public/css/search.css" />
+    <link rel="stylesheet" href="../public/css/style.css" />
   </head>
 
   <body>
