--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -2,16 +2,9 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
-  <link rel="stylesheet" href="css/contact.css">
-  <link rel="stylesheet" href="css/style.css">
+  <%- include('../components/Head'); %>
+  <link rel="stylesheet" href="../public/css/contact.css">
+  <link rel="stylesheet" href="../public/css/style.css">
   <title>Document</title>
 </head>
 
