--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/splash.css">
-    <title>RECIPE BY DESIGN: HOME</title>
+    <link rel="stylesheet" href="../public/css/splash.css">
+    <title>RECIPE BY DESIGN</title>
 </head>
 <body>
     <div class="container">
