correct style sheet links

--- a/src/views/cocktails.ejs
+++ b/src/views/cocktails.ejs
@@ -3,9 +3,9 @@
 
 <head>
   <%- include('../components/Head'); %>>
-  <link rel="stylesheet" href="../public/css/cocktails.css" />
-  <link rel="stylesheet" href="../public/css/style.css" />
-  <title>Recipe By Design</title>
+  <link rel="stylesheet" href="css/cocktails.css" />
+  <link rel="stylesheet" href="css/style.css" />
+  <title>Search Cocktails</title>
 </head>
 
 <body class="cocktails">
