--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../public/css/splash.css">
+    <link rel="stylesheet" href="css/splash.css">
     <title>RECIPE BY DESIGN</title>
 </head>
+
 <body>
     <div class="container">
         <div class= "split left">
             <h1>Pick & Choose</h1>
-            <span class="spanLeft"><a href="/search" class="btn">Search</a></span>
+            <span class="spanLeft"><a href="/recipes" class="btn">Search</a></span>
         </div>
         <div class= "split right">
             <h1>Recipe Roulette</h1>
