--- a/src/views/roulette.ejs
+++ b/src/views/roulette.ejs
@@ -3,9 +3,9 @@
 
 <head>
   <%- include('../components/Head'); %>
-  <link rel="stylesheet" href="../public/css/roulette.css">
-  <link rel="stylesheet" href="../public/css/style.css">
-  <title>Document</title>
+  <link rel="stylesheet" href="css/roulette.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Recipe Roulette</title>
 </head>
 
 <header>
