--- a/src/components/Navigation.ejs
+++ b/src/components/Navigation.ejs
@@ -4,8 +4,8 @@
 </label>
 
 <ul>
-    <li id="search"><a href="/search">Search</a></li>
+    <li id="search"><a href="/recipes">Search Recipes</a></li>
+    <li id="cocktails"><a href="/cocktails">Search Cocktails</a></li>
     <li id="roulette"><a href="/roulette">Recipe Roulette</a></li>
-    <li id="cocktails"><a href="/cocktails">Cocktails</a></li>
     <li id="contact"><a href="/contact">Contact Us</a></li>
 </ul>
