--- a/src/views/Recipes.ejs
+++ b/src/views/Recipes.ejs
@@ -4,8 +4,8 @@
 <head>
     <%- include('../components/Head'); %>
     <title>Search Recipes</title>
-    <link rel="stylesheet" href="../public/css/search.css" />
-    <link rel="stylesheet" href="../public/css/style.css" />
+    <link rel="stylesheet" href="css/recipes.css" />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
 
   <body>
