--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -3,8 +3,8 @@
 
 <head>
   <%- include('../components/Head'); %>
-  <link rel="stylesheet" href="../public/css/contact.css">
-  <link rel="stylesheet" href="../public/css/style.css">
+  <link rel="stylesheet" href="css/contact.css">
+  <link rel="stylesheet" href="css/style.css">
   <title>Document</title>
 </head>
 
