finish converting former project into ejs

--- a/src/components/Navigation.ejs
+++ b/src/components/Navigation.ejs
@@ -3,9 +3,11 @@
     <i class="fas fa-bars"></i>
 </label>
 
-<ul>
-    <li id="search"><a href="/recipes">Search Recipes</a></li>
-    <li id="cocktails"><a href="/cocktails">Search Cocktails</a></li>
-    <li id="roulette"><a href="/roulette">Recipe Roulette</a></li>
-    <li id="contact"><a href="/contact">Contact Us</a></li>
+<ul style = '
+    background: rgb(255, 255, 255, 0.4);
+    '>
+    <li><a id="recipes" href="/recipes">Search Recipes</a></li>
+    <li><a id="cocktails" href="/cocktails">Search Cocktails</a></li>
+    <li><a id="roulette" href="/roulette">Recipe Roulette</a></li>
+    <li><a id="contact" href="/contact">Contact Us</a></li>
 </ul>
