--- a/src/views/cocktails.ejs
+++ b/src/views/cocktails.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <%- include('../components/Head'); %>>
+  <%- include('../components/Head'); %>
   <link rel="stylesheet" href="css/cocktails.css" />
   <link rel="stylesheet" href="css/style.css" />
   <title>Search Cocktails</title>
