--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -55,7 +55,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"
     integrity="sha384-lpyLfhYuitXl2zRZ5Bn2fqnhNAKOAaM/0Kr9laMspuaMiZfGmfwRNFh8HlMy49eQ"
     crossorigin="anonymous"></script>
-
+    <script src="js/contact.js"></script>
 </body>
 
 </html>
