add login button to nav

--- a/src/components/Navigation.ejs
+++ b/src/components/Navigation.ejs
@@ -10,4 +10,7 @@
     <li><a id="cocktails" href="/cocktails">Search Cocktails</a></li>
     <li><a id="roulette" href="/roulette">Recipe Roulette</a></li>
     <li><a id="contact" href="/contact">Contact Us</a></li>
+    <li style = 'background: rgba(0, 0, 0, .8);
+            border-radius: 2px;'
+    ><a id="login" href="/login">LOGIN</a></li>
 </ul>
