--- a/src/components/Navigation.ejs
+++ b/src/components/Navigation.ejs
@@ -3,14 +3,16 @@
     <i class="fas fa-bars"></i>
 </label>
 
-<ul style = '
-    background: rgb(255, 255, 255, 0.4);
-    '>
-    <li><a id="recipes" href="/recipes">Search Recipes</a></li>
-    <li><a id="cocktails" href="/cocktails">Search Cocktails</a></li>
-    <li><a id="roulette" href="/roulette">Recipe Roulette</a></li>
-    <li><a id="contact" href="/contact">Contact Us</a></li>
-    <li style = 'background: rgba(0, 0, 0, .8);
-            border-radius: 2px;'
-    ><a id="login" href="/login">LOGIN</a></li>
-</ul>
+<div>
+    <ul style = '
+        background: rgb(255, 255, 255, 0.4);
+        '>
+        <li><a id="recipes" href="/recipes">Search Recipes</a></li>
+        <li><a id="cocktails" href="/cocktails">Search Cocktails</a></li>
+        <li><a id="roulette" href="/roulette">Recipe Roulette</a></li>
+        <li><a id="contact" href="/contact">Contact Us</a></li>
+        <li style = 'background: rgba(0, 0, 0, .8);
+                border-radius: 2px;'
+        ><a id="login" href="/login">LOGIN</a></li>
+    </ul>
+</div>
